--- a/tablet.properties
+++ b/tablet.properties
@@ -1,4 +1,6 @@
 #initial
-#Tue Apr 11 23:23:11 PDT 2017
-router=192.168.1.1
-logServerHost=192.168.1.108
+#Tue Apr 18 05:56:44 PDT 2017
+router=192.168.2.1
+logServerHost=192.168.2.118
+last=131
+first=100
